updating swagger functions definitions
