# app/Http/Controllers/API/StocksController.php
@@ -12,21 +12,17 @@ class StocksController extends BaseController
      * @OA\Get(
      *     path="/api/stocks/",
      *     tags={"Stocks"},
-     *     description="Search Stocks on API provider",
+     *     description="Get Searches history by user",
      *     security={{ "apiAuth": {} }},
-     *     @OA\Parameter(
-     *         name="symbol",
-     *         in="query",
-     *         description="Stocks name",
-     *         required=true,
-     *     ),
      *     @OA\Response(
      *         response=200,
-     *         description="successful",
-     *     ),
-     *     @OA\Response(
-     *         response=400,
-     *         description="error"
+     *         description="OK",
+     *         @OA\JsonContent(
+     *             oneOf={
+     *                 @OA\Schema(type="json")
+     *             },
+     *             @OA\Examples(example="json", value={"success": true, "data": {"id": 16,"user_id": 1,"company_name": "Netflix","symbol": "nflx","latest_price": "143.90","created_at": "2022-11-03T17:47:03.000000Z","updated_at": "2022-11-03T17:47:03.000000Z"}, "message": "Recent searches"}, summary="Sucess"),
+     *         )
      *     ),
      * )
      */
@@ -46,19 +42,34 @@ class StocksController extends BaseController
      *     tags={"Stocks"},
      *     description="Search Stocks on API provider",
      *     security={{ "apiAuth": {} }},
-     *     @OA\Parameter(
-     *         name="symbol",
-     *         in="query",
-     *         description="Stocks name",
-     *         required=true,
+     *     @OA\RequestBody(
+     *         @OA\MediaType(
+     *             mediaType="multipart/form-data",
+     *             @OA\Schema(
+     *                 @OA\Property(
+     *                     property="company_name",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="symbol",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="latest_price",
+     *                     type="integer"
+     *                 ),
+     *             )
+     *         )
      *     ),
      *     @OA\Response(
      *         response=200,
-     *         description="successful",
-     *     ),
-     *     @OA\Response(
-     *         response=400,
-     *         description="error"
+     *         description="OK",
+     *         @OA\JsonContent(
+     *             oneOf={
+     *                 @OA\Schema(type="json")
+     *             },
+     *             @OA\Examples(example="json", value={"success": true, "data": {"id": 16,"user_id": 1,"company_name": "Netflix","symbol": "nflx","latest_price": "143.90","created_at": "2022-11-03T17:47:03.000000Z","updated_at": "2022-11-03T17:47:03.000000Z"}, "message": "Stocks history created"}, summary="Sucess"),
+     *         ),
      *     ),
      * )
      */
@@ -81,23 +92,30 @@ class StocksController extends BaseController
 
     /**
      * @OA\Delete(
-     *     path="/api/stocks/",
+     *     path="/api/stocks/{id}",
      *     tags={"Stocks"},
-     *     description="Search Stocks on API provider",
+     *     description="Remove stocks search from history",
      *     security={{ "apiAuth": {} }},
      *     @OA\Parameter(
-     *         name="symbol",
-     *         in="query",
-     *         description="Stocks name",
+     *         name="id",
+     *         in="path",
+     *         description="Stocks id",
      *         required=true,
+     *         @OA\Examples(example="integer", value="1", summary="Stocks id"),
      *     ),
      *     @OA\Response(
      *         response=200,
-     *         description="successful",
+     *         description="OK",
+     *         @OA\JsonContent(
+     *             oneOf={
+     *                 @OA\Schema(type="json")
+     *             },
+     *             @OA\Examples(example="json", value={"success": true, "data": {"id": 16,"user_id": 1,"company_name": "Netflix","symbol": "nflx","latest_price": "143.90","created_at": "2022-11-03T17:47:03.000000Z","updated_at": "2022-11-03T17:47:03.000000Z"}, "message": "Stocks history deleted"}, summary="Sucess"),
+     *         ),
      *     ),
      *     @OA\Response(
      *         response=400,
-     *         description="error"
+     *         description="Bad Request"
      *     ),
      * )
      */
