# storage/api-docs/api-docs.json
@@ -5,52 +5,124 @@
         "version": "0.1"
     },
     "paths": {
-        "/register/": {
+        "/api/register/": {
             "post": {
                 "tags": [
                     "Auth"
                 ],
                 "description": "Create an account on application",
-                "operationId": "cc8ce73eafadd27ab81cd60de152c3c1",
-                "parameters": [
-                    {
-                        "name": "symbol",
-                        "in": "query",
-                        "description": "Stocks name",
-                        "required": true
+                "operationId": "8c28d866ae1606f9aa823e81f6e85e32",
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "type": "string"
+                                    },
+                                    "email": {
+                                        "type": "string"
+                                    },
+                                    "password": {
+                                        "type": "string"
+                                    },
+                                    "c_password": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
                     }
-                ],
+                },
                 "responses": {
                     "200": {
-                        "description": "successful"
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "oneOf": [
+                                        {
+                                            "type": "json"
+                                        }
+                                    ]
+                                },
+                                "examples": {
+                                    "json": {
+                                        "summary": "Sucess",
+                                        "value": {
+                                            "success": true,
+                                            "data": {
+                                                "token": "r6V74GKLmwYzFAbK2DWd31X1LMo8qj",
+                                                "name": "Cleverson"
+                                            },
+                                            "message": "User register successfully"
+                                        }
+                                    }
+                                }
+                            }
+                        }
                     },
                     "400": {
-                        "description": "error"
+                        "description": "Bad Request"
                     }
                 }
             }
         },
-        "/login/": {
+        "/api/login/": {
             "post": {
                 "tags": [
                     "Auth"
                 ],
                 "description": "Login on applicaton",
-                "operationId": "2bd01ed5095f36bd99dcc82f59c9bef0",
-                "parameters": [
-                    {
-                        "name": "symbol",
-                        "in": "query",
-                        "description": "Stocks name",
-                        "required": true
+                "operationId": "984d26f827ec39bc2ca0bf7cc5c03b19",
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "properties": {
+                                    "email": {
+                                        "type": "string"
+                                    },
+                                    "password": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
                     }
-                ],
+                },
                 "responses": {
                     "200": {
-                        "description": "successful"
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "oneOf": [
+                                        {
+                                            "type": "json"
+                                        }
+                                    ]
+                                },
+                                "examples": {
+                                    "json": {
+                                        "summary": "Sucess",
+                                        "value": {
+                                            "success": true,
+                                            "data": {
+                                                "token": "r6V74GKLmwYzFAbK2DWd31X1LMo8qj",
+                                                "name": "Cleverson"
+                                            },
+                                            "message": "User login successfully"
+                                        }
+                                    }
+                                }
+                            }
+                        }
                     },
                     "400": {
-                        "description": "error"
+                        "description": "Bad Request"
                     }
                 }
             }
@@ -78,7 +150,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Success",
+                        "description": "OK",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -104,7 +176,26 @@
                         }
                     },
                     "400": {
-                        "description": "error"
+                        "description": "Bad Request",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "oneOf": [
+                                        {
+                                            "type": "json"
+                                        }
+                                    ]
+                                },
+                                "examples": {
+                                    "json": {
+                                        "summary": "Error",
+                                        "value": {
+                                            "error": "Enter a valid stock name"
+                                        }
+                                    }
+                                }
+                            }
+                        }
                     }
                 },
                 "security": [
@@ -119,24 +210,47 @@
                 "tags": [
                     "Stocks"
                 ],
-                "description": "Search Stocks on API provider",
+                "description": "Get Searches history by user",
                 "operationId": "c5b49062b2f866d15ce129dcb4fe4600",
-                "parameters": [
-                    {
-                        "name": "symbol",
-                        "in": "query",
-                        "description": "Stocks name",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
-                        "description": "successful"
-                    },
-                    "400": {
-                        "description": "error"
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "oneOf": [
+                                        {
+                                            "type": "json"
+                                        }
+                                    ]
+                                },
+                                "examples": {
+                                    "json": {
+                                        "summary": "Sucess",
+                                        "value": {
+                                            "success": true,
+                                            "data": {
+                                                "id": 16,
+                                                "user_id": 1,
+                                                "company_name": "Netflix",
+                                                "symbol": "nflx",
+                                                "latest_price": "143.90",
+                                                "created_at": "2022-11-03T17:47:03.000000Z",
+                                                "updated_at": "2022-11-03T17:47:03.000000Z"
+                                            },
+                                            "message": "Recent searches"
+                                        }
+                                    }
+                                }
+                            }
+                        }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "apiAuth": []
+                    }
+                ]
             },
             "post": {
                 "tags": [
@@ -144,45 +258,130 @@
                 ],
                 "description": "Search Stocks on API provider",
                 "operationId": "2793f9a6c20bacfd948a5d1dc474a86d",
-                "parameters": [
-                    {
-                        "name": "symbol",
-                        "in": "query",
-                        "description": "Stocks name",
-                        "required": true
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "properties": {
+                                    "company_name": {
+                                        "type": "string"
+                                    },
+                                    "symbol": {
+                                        "type": "string"
+                                    },
+                                    "latest_price": {
+                                        "type": "integer"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
                     }
-                ],
+                },
                 "responses": {
                     "200": {
-                        "description": "successful"
-                    },
-                    "400": {
-                        "description": "error"
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "oneOf": [
+                                        {
+                                            "type": "json"
+                                        }
+                                    ]
+                                },
+                                "examples": {
+                                    "json": {
+                                        "summary": "Sucess",
+                                        "value": {
+                                            "success": true,
+                                            "data": {
+                                                "id": 16,
+                                                "user_id": 1,
+                                                "company_name": "Netflix",
+                                                "symbol": "nflx",
+                                                "latest_price": "143.90",
+                                                "created_at": "2022-11-03T17:47:03.000000Z",
+                                                "updated_at": "2022-11-03T17:47:03.000000Z"
+                                            },
+                                            "message": "Stocks history created"
+                                        }
+                                    }
+                                }
+                            }
+                        }
                     }
-                }
-            },
+                },
+                "security": [
+                    {
+                        "apiAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/stocks/{id}": {
             "delete": {
                 "tags": [
                     "Stocks"
                 ],
-                "description": "Search Stocks on API provider",
-                "operationId": "10986e0f00bcd1d2a8b7dac7566601e0",
+                "description": "Remove stocks search from history",
+                "operationId": "eb7f842903e900a1a2ef85c471e4acd5",
                 "parameters": [
                     {
-                        "name": "symbol",
-                        "in": "query",
-                        "description": "Stocks name",
-                        "required": true
+                        "name": "id",
+                        "in": "path",
+                        "description": "Stocks id",
+                        "required": true,
+                        "examples": {
+                            "integer": {
+                                "summary": "Stocks id",
+                                "value": "1"
+                            }
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "successful"
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "oneOf": [
+                                        {
+                                            "type": "json"
+                                        }
+                                    ]
+                                },
+                                "examples": {
+                                    "json": {
+                                        "summary": "Sucess",
+                                        "value": {
+                                            "success": true,
+                                            "data": {
+                                                "id": 16,
+                                                "user_id": 1,
+                                                "company_name": "Netflix",
+                                                "symbol": "nflx",
+                                                "latest_price": "143.90",
+                                                "created_at": "2022-11-03T17:47:03.000000Z",
+                                                "updated_at": "2022-11-03T17:47:03.000000Z"
+                                            },
+                                            "message": "Stocks history deleted"
+                                        }
+                                    }
+                                }
+                            }
+                        }
                     },
                     "400": {
-                        "description": "error"
+                        "description": "Bad Request"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "apiAuth": []
+                    }
+                ]
             }
         }
     },
